# CapraPose-RT-Core

CapraPose-RT-Core/: README.md  pyproject.toml
CapraPose-RT-Core/caprapose_rt/: __init__.py  constants.py  schema.py
CapraPose-RT-Core/caprapose_rt/config/: __init__.py  loader.py
CapraPose-RT-Core/caprapose_rt/datasets/: __init__.py  coco_goat.py  transforms.py
CapraPose-RT-Core/caprapose_rt/engine/: __init__.py  checkpoint.py  common.py  data_loading.py  evaluator.py  trainer.py
CapraPose-RT-Core/caprapose_rt/models/: __init__.py  pose_estimator.py
CapraPose-RT-Core/caprapose_rt/models/backbones/: __init__.py  rtmpose_m.py  rtmpose_style.py
CapraPose-RT-Core/caprapose_rt/models/heads/: __init__.py  heatmap_head.py  latent_part_decoder.py
CapraPose-RT-Core/caprapose_rt/models/losses/: __init__.py  topology_consistent.py
CapraPose-RT-Core/caprapose_rt/models/modules/: __init__.py  adaptive_topology_refinement.py
CapraPose-RT-Core/caprapose_rt/utils/: __init__.py  geometry.py
CapraPose-RT-Core/configs/: caprapose_core_template.py
CapraPose-RT-Core/examples/: minimal_forward.py
CapraPose-RT-Core/scripts/: benchmark.sh  eval.sh  export_qualitative.sh  infer.sh  run_formal_round1.ps1  run_short_baseline.sh  run_short_full.sh  train_baseline.sh  train_decoder.sh  train_decoder_refine.sh  train_full.sh
CapraPose-RT-Core/tests/: test_config.py  test_dataset.py  test_geometry.py  test_loss.py  test_model.py  test_normalize_annotations.py  test_paper_common.py  test_schema.py
