[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caprapose-rt-core"
version = "0.1.0"
description = "Core CapraPose-RT model skeleton for 2D dairy-goat pose estimation."
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["caprapose_rt*"]
